--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -6,7 +6,7 @@ body {
 
 h1 {
     font-family: 'Acme', sans-serif;
-    width: 50%;
+    width: 100%;
     text-align: center;
     padding: 10px;
     border-radius: 10px;
@@ -19,6 +19,15 @@ h2 {
     color: rgb(233, 150, 122);
     width: 95%;
     padding: 5px;
+}
+
+h3 {
+   background-color: rgba(255, 102, 0, .6);
+   color: rgb(255,255,255);
+   border-radius: 10px;
+   padding: 10px;
+   width: 50%;
+   margin: 50px;
 }
 
 a {
@@ -87,4 +96,11 @@ table {
 #payment-form {
     background-color: rgb(139, 0, 0);
     color: rgb(233, 150, 122);
+}
+.review_form {
+    background-color: rgb(143, 188, 143);
+    padding: 10px;
+}
+.input-group {
+    width: 100%;
 }
