--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -34,8 +34,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
-                    <li><a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i> Cart                        
-                        <label class="badge badge-light">{{ items_in_cart }}</label></a>
+                    <li><a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i> Cart<label class="badge badge-light">{{ items_in_cart }}</label></a></li>
                     <li><a href="{% url 'products' %}"><i class="fa fa-shopping-bag"></i> Products</a></li>
                     <li><a href="{% url 'profile' %}"><i class="fa fa-user"></i> Profile</a></li>
                     <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Log Out</a></li>
