--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -2,10 +2,22 @@
 {% load gravatar %}
 {% block content %}
 <div class="row">
-<div class="col-lg-10 col-lg-offset-3">
+<div class="col-lg-12">
 <h1>Products <br />
 <a href="{% url 'create_post' %}" class="btn btn-danger btn-sm btn-block" role="button" id="create"><i class="glyphicon glyphicon-edit"></i> Post</a></h1>
 </div>
+<div class="col-lg-8 col-lg-offset-2">
+                    <h1><form class="navbar-form" role="search" action="{% url 'search' %}">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search" name="query"><button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button><hr>
+                            <input type="radio" name="match" value="contains" checked> Contains<br>
+                            <input type="radio" name="match" value="begins"> Begins With<br>
+                            <div class="input-group-btn">
+                            
+                        </div>
+                        </div>
+                    </form></h1>
+                </div>
 </div>
 <div class='row'>
    {% for product in product %}
