--- a/products/templates/products/product-item.html
+++ b/products/templates/products/product-item.html
@@ -24,7 +24,7 @@
   
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <form method="post" action="{% url 'add_a_review' %}">
+      <form method="post" action="{% url 'add_a_review' %}" class='review_form'>
         {% csrf_token %}
         {{ review_form | as_bootstrap }}
         <input type="hidden" name="product" value="{{product.id}}"/>
@@ -36,9 +36,9 @@
   <div class="row">
     <div class="col-lg-10 col-lg-offset-1">
     {% for review in product.reviews_received.all %}
-    <p>{{review.content}}</p>
-    <p><small >Rating {{review.rating}}</small></p>
-    <p><small class="text-muted">Posted by {{review.reviewer.username}}</small></p>
+    <h3><p>{{review.content}}</p>
+    <p><small >Rating: {{review.rating}}</small></p>
+    <p><small class="text-muted">Posted by {{review.reviewer.username}}</small></p></h3>
     <hr>
     {%endfor%}
     </div>
